glibc (2.7-6) unstable; urgency=low

  [ Aurelien Jarno ]
  * patches/localedata/locale-ks_IN.diff: new locale contributed by Rakesh
    Pandit.  Closes: #457351.
  * patches/series: enable patches/any/cvs-vfscanf.diff.  Closes: #453408.
  * Remove DEB_BUILD_OPTIONS=parallel=n support, as it is deprecated.

  [ Clint Adams ]
  * debhelper.in/nscd.init: use lsb output functions.  Closes: #457661.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 01 Jan 2008 23:06:46 +0100

glibc (2.7-5) unstable; urgency=low

  [ Aurelien Jarno ]
  * Moved merged parts of patches/any/submitted-sched_h.diff into
    patches/any/cvs-sched_h.diff.
  * patches/any/cvs-ether_line.diff: new patch from upstream to fix
    ether_line().  Closes: bug#453899.
  * patches/any/cvs-vfscanf.diff: new patch from upstream to fix
    crash when %as is used with sscanf().  Closes: bug#453408.
  * debian/rules: also set CXX when cross-compiling.
  * patches/any/submitted-malloc_h.diff: removed, replaced by
    patches/any/cvs-wchar_h.diff.
  * debian/sysdeps/depflags.pl: conflict against tzdata (<< 2007j-2) as
    etch now have version 2007j-1etch1.  Closes: bug#455783.
  * debian/sysdeps/depflags.pl: suggests libc6-i686 on i386 architecture.
    Closes: bug#455603.
  * any/submitted-rfc3484-labels.diff: new patch to fix RFC 3484 default
    label ordering.  Closes: bug#456779.
  * patches/alpha/local-dl-procinfo.diff: add missing part.  Closes:
    bug#456260.

  [ Petr Salinger]
  * kfreebsd/local-sysdeps.diff: update to revision 2082 (from glibc-bsd).
  * any/cvs-fchmodat.diff: properly declare as stub - needed by GNU/kFreeBSD.

  [ Samuel Thibault]
  * patches/hurd-i386/submitted-ioctl-unsigned-size_t.diff: update to also
    handle unsigned char/int/short/long and ssize_t.

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 19 Dec 2007 01:22:06 +0100

glibc (2.7-4) unstable; urgency=low

  [ Aurelien Jarno ]
  * patches/localedata/locale-de_LI.diff: fix locale.  Closes: bug#453860.