@@ -9,7 +9,7 @@ $(stamp)$(DEB_TARBALL):
 	cd $(build-tree) && tar -xjf $(CURDIR)/$(DEB_TARBALL)
 	touch $@
 
-$(patsubst %,$(stamp)%,$(GLIBC_OVERLAYS)):
+$(patsubst %,$(stamp)%,$(GLIBC_OVERLAYS)): $(stamp)$(DEB_TARBALL)
 	cd $(DEB_SRCDIR) && tar -xjf $(CURDIR)/$(notdir $@)
 	a=`echo $(notdir $@) | sed -e 's/^glibc-//' -e 's/-[^-]*$$//'`; \
 	d=`echo $(notdir $@) | sed -e 's/\.tar\.bz2$$//'`; \
