@@ -5,6 +5,8 @@ glibc (2.7-6) unstable; urgency=low
     Pandit.  Closes: #457351.
   * patches/series: enable patches/any/cvs-vfscanf.diff.  Closes: #453408.
   * Remove DEB_BUILD_OPTIONS=parallel=n support, as it is deprecated.
+  * Support dpkg-buildpackage -j, but only debian/rules is actually run in
+    parallel.
 
   [ Clint Adams ]
   * debhelper.in/nscd.init: use lsb output functions.  Closes: #457661.
